# veritas

./: .env.example  .gitignore  README.md  docker-compose.yml  vercel.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0231dfd2c5fb_initial_schema.py  7c41aa09e3d1_add_users_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analyze.py  auth.py  corpus.py  health.py
backend/app/cache/: analysis_cache.py
backend/app/config_data/: source_tiers.yaml
backend/app/db/: models.py  repositories.py  session.py
backend/app/graph/: build.py  trace.py
backend/app/graph/nodes/: adjudicate.py  calibration.py  decompose.py  ingest.py  retrieve.py  stance.py  synthesize.py
backend/app/prompts/: __init__.py  decompose_v1.py  stance_v1.py  synthesize_v1.py
backend/app/providers/: factory.py
backend/app/providers/embeddings/: base.py  minilm.py  mock.py
backend/app/providers/llm/: base.py  groq_provider.py  mock.py
backend/app/providers/search/: base.py  duckduckgo_provider.py  mock.py
backend/app/retrieval/: dedup.py  pgvector_store.py  source_tiers.py
backend/app/schemas/: auth.py  result.py  state.py
backend/app/services/: auth.py  orchestrator.py
backend/tests/: conftest.py
backend/tests/api/: test_analyze_endpoint.py  test_auth_endpoint.py
backend/tests/fixtures/: labelled_claims.json
backend/tests/integration/: test_graph_pipeline_mock.py
backend/tests/unit/: test_adjudicate.py  test_schemas.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  calibration-api.ts  fixtures.ts  sse.ts  theme.ts  types.ts  use-prefers-reduced-motion.ts  verdict.ts
frontend/tests/: deflection.test.ts  (+2 more)
(+30 files in other folders)
