[project]
name = "veritas-backend"
version = "0.1.0"
description = "VERITAS - calibrated, evidence-traced misinformation detection"
requires-python =">=3.11,<3.13"
readme = "../README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sse-starlette>=2.1,<3.0",
    "langgraph>=0.2.45,<0.3",
    "langchain-groq>=0.2.1,<0.3",
    "langchain-core>=0.3.15,<0.4",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3.6,<0.4",
    "trafilatura>=1.12,<2.0",
    "ddgs>=9.0,<10.0",
    "httpx>=0.27,<0.28",
    "tenacity>=9.0,<10.0",
    "pyyaml>=6.0,<7.0",
    "numpy>=1.26,<2.0",
    "pyjwt>=2.10,<3.0",
    "bcrypt>=4.2,<5.0",
]

[project.optional-dependencies]
# Real semantic embeddings. Kept OUT of the base install because
# sentence-transformers pulls in PyTorch (~multi-GB), which blows past
# Vercel's 500MB serverless bundle limit. Vercel installs only the base
# deps (see backend/requirements.txt); MOCK_MODE=true never needs this.
# Install locally for real embeddings: pip install -e ".[dev,ml]"
ml = [
    "sentence-transformers>=3.2,<4.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "pytest-socket>=0.7,<0.8",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
